style:fixed alignments and changed  some styles for calendar and classes div

--- a/client/src/components/css/navbar.css
+++ b/client/src/components/css/navbar.css
@@ -12,12 +12,15 @@
 }
 
 header {
+  position:sticky;
+  top: 0;
+  width:100%;
   z-index: 1;
   display: flex;
   align-items: center;
   justify-content: space-between;
   height: 70px;
-  padding: 0 20px;
+  padding: 16px 20px;
   background: white;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
 }
