--- a/client/src/css/Home.css
+++ b/client/src/css/Home.css
@@ -1,14 +1,22 @@
-.maincontainer {
+.body{
   display: flex;
-  width: 100vw;
-  height: 100vh;
-  justify-content: center;
+  flex-direction: column;
   background: white;
+  align-items: center;
 }
 
-.class_history {
+
+.class-main-history{
+  display:flex;
+  width:100%;
+  height: max-content;
+  justify-content: center;
+  padding:0 16px;
+}
+
+.class-history {
   display: flex;
-  width: 350px;
+  width: 100%;
   justify-content: center;
   align-items: center;
   max-width: 450px;
@@ -17,10 +25,15 @@
   flex-direction: column;
   background-color: white;
   border: 1px solid #8c8484;
-  padding: 50px;
   gap: 10px;
   position: relative;
   border-radius: 10.3143px;
+}
+
+.class-heading{
+  color:#282424;
+  font-weight: 700;
+  font-size: 22px;
 }
 
 .title {
@@ -29,13 +42,40 @@
   font-weight: 500;
 }
 
+
+.class-main-div{
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width:100%;
+  padding:0 16px;
+  max-width: 500px;
+  align-items: center;
+}
+
+.class-wrapper {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width:100%;
+  align-items: center;
+  padding: 20px 9px;
+  gap: 20px;
+  height: 300px;
+  max-height: 300px;
+  border: 0.634549px solid #8c8484;
+  border-radius: 6.34549px;
+}
+
+
+
+
 .status-wrapper {
-  position: absolute;
-  bottom: 10px;
-  background: inherit;
-  align-self: flex-end;
+  align-self: center;
   justify-content: flex-end;
-  gap: 10px;
+  gap: 20px;
   display: flex;
 }
 
@@ -54,6 +94,13 @@
   border-radius: 50%;
 }
 
+.status-yellow{
+  height: 20px;
+  width: 20px;
+  background: #FFCD1B;
+  border-radius: 50%;
+}
+
 .status-green {
   height: 20px;
   width: 20px;
@@ -63,20 +110,4 @@
 
 .status-txt {
   font-size: 14px;
-}
-
-.class-wrapper {
-  margin-top: 10px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 360px;
-  max-width: 90%;
-  align-items: center;
-  padding: 20px 9px;
-  gap: 20px;
-  height: 300px;
-  max-height: 300px;
-  border: 0.634549px solid #8c8484;
-  border-radius: 6.34549px;
 }
